1991-07-12  dickey@software.org

	* src/ded.c: last change introduced errs in 'count_tags()'

	* src/ded.hlp: note about CTL/G

	* src/version.h: added CTL/G command

	* src/ded.c: added CTL/G command to show tagged files (+blocks/bytes).
	cleanup some message code.

1991-07-11  dickey@software.org

	* src/dedfind.c, src/dedread.c, src/dedshow.c, src/deduniq.c, src/sortset.c, src/deddoit.c, src/dedtype.c, src/ded.c:
	modified interface to to_work()

	* src/dedtype.c: removed redundant workspace-clear on exit

	* src/version.h: minor nits about screen refresh

	* src/dedtype.c: use 'showMARK()' to show current-column

	* src/ded.c: broke-out 'showMARK()' for use in 'dedtype()'

	* src/dedscan.c: modified interface to 'showFILES()'

	* src/dedline.c:
	modified interface to 'showFILES()' so that workspace is not
	cleared when doing the inline operations.

	* src/ded.c:
	modified interface to 'showFILES()' so that scrolling (in a
	given file-list) and inline/toggle operations do not cause
	the workspace to be cleared.

1991-07-02  dickey@software.org

	* src/ded.hlp: updated notes for S,P commands (now 3-way)

	* src/version.h: made file-list 'S' and 'P' commands 3-way.

	* src/ded2s.c:
	made S_opt, P_opt 3-way toggles. S_opt is 3-way so I can show
	either blocks/bytes or both. P_opt is 3-way to show as a
	side-effect uid/gid numerically as well as protection.

	* src/ded.c: made S_opt, P_opt 3-way toggles.

1991-07-01  dickey@software.org

	* src/dedtype.c:
	corrected column-limit logic (very long lines, longer than
	BUFSIZ would never get a newline, causing following lines
	to not be displayed).

1991-06-28  dickey@software.org

	* src/ded.c, src/deddoit.c, src/ftree.c, src/sortset.c:
	lint (apollo sr10.3)

	* src/ded.h: lint (defined 'blip()')

	* src/version.h:
	corrected code which knows about effective/real user-id
	(e.g., flag for executable, permission for chmod).
	Added P-sort (sorts extended-acl-flag).

	* src/ded.hlp, src/sortset.c: added P-sort
